--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -19,7 +19,7 @@
     
   
     <div class="head-text col-lg-8 col-sm-6">
-           <img src="/img/флажек.jpg" align="left" class="img-flag">
+           <img src="/img/флаг.png" align="left" class="img-flag">
           <div>Интерактивная платформа взаимодействия<br>
 с заинтересованными сторонами Инжинирингового дивизиона Госкорпорации «Росатом»</div> 
     </div>
