--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -10,8 +10,42 @@
         <a class="col-xl-4 col-sm-5 text-center my-auto" href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ ПЛАТФОРМЫ</a>
 
 </div>
-<div class="list">
+<hr>
+<div class="main row">
+<div class="event-list"></div>
+<div class="list row">
+        <a class="list-item align-self-center row col-2" href="/publicreport">
+               <img src="/img/отчеты.png" width="20px" height="20px" class="img-menu2"><div class="align-self-end ">Публичные<br>отчеты</div> 
+        </a>
+        <a class="list-item align-self-center row col-2 ml-auto" href="/survey">
+                <img src="/img/опросы.png" width="20px" height="20px" class="img-menu2"><div class="align-self-end">Публичные<br>опросы</div> 
+        </a>
+        <a class="list-item align-self-center row col-2 ml-auto" href="/events">
+                <img src="/img/Мероприятия.png" width="20px" height="20px" class="img-menu2"><div class="align-self-end">Мероприятия<br>и материалы</div> 
+        </a>
+        <a class="list-item align-self-center row col-2 ml-auto">
+                <img src="/img/Карта.png" width="20px" height="20px" class="img-menu2"><div class="align-self-end">Карта<br><span class="d-md-none d-lg-block">заинтересованных сторон</span></div> 
+        </a>
+        <a class="list-item align-self-center row col-2 ml-auto">
+                <img src="/img/кабинет.png" width="20px" height="20px" class="img-menu2"><div class="align-self-end">Личные кабинеты<br><span class="d-md-none d-xl-block">заинтересованных сторон</span></div> 
+        </a>
+        <hr class="col-12">
+        <div class="content-img col-7"></div>
+        <div class="content-text col-5">
+                <span>Одним из инструментов повышения качества социального отчета является взаимодействие между компанией<br> 
+                        и её заинтересованными сторонами при подготовке отчетности. Организация подобного взаимодействия предполагает создание условий для получения запросов стейкхолдеров по поводу раскрытия информации 
+                        в будущем отчете в части социально значимых аспектов её деятельности. Размещая в отчете ответы на вопросы стейкхолдеров, выявленные в ходе диалогов, компания делает шаг от прозрачности к «подотчетности», 
+                        а социальный отчет приобретает качество «нацеленности» на своих читателей.<br>
+                        <pre> </pre>
+                                Выстраивание взаимодействия с заинтересованными сторонами в рамках подготовки отчетности может быть поделено на четыре последовательных этапа.</span>
+                               <p><a><img src="/img/2стрелки.png" alt=""></a></p> 
+        </div>
+        <div class="old">
+                <img src="/img/ключ.png" alt=""><span> Данная платформа взаимодействия с заинтересованными сторонами является второй версией платформы, созданной в 2013 году. Первая версия платформы с материалами находится по <a class="ss-old">ССЫЛКЕ</a></span>
+        </div>
         
 </div>
-<hr>
+
+</div>
+
 {% endblock %}
