--- a/src/css/temp.css
+++ b/src/css/temp.css
@@ -246,3 +246,49 @@ footer{
     height: 16px;
     margin-right: 5px;
 }
+
+.auth {
+    color:grey;
+}
+
+.nav-tabs .nav-link.auth.active{
+    color:rgb(31, 58, 106);
+}
+
+.nav-tabs .nav-link{
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.autorize-block{
+    padding: 30px;
+    border: solid 1px #dee2e6;
+    border-top: 0px;
+}
+
+.autorize-block .form-control{
+    border: 1px solid rgb(31, 58, 106);
+    border-radius: 0px;
+}
+
+.content-block{
+    margin-top: 42px;
+    border: solid 1px #dee2e6;
+    padding: 30px;
+}
+.content-block img{
+    margin: 10px;
+}
+
+.row-flex{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display:         flex;
+}
+
+.auth-button{
+    background-color: rgb(31,58,106);
+    border-color: rgb(31,58,106);
+    border-radius: 0px;
+}
