--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -27,7 +27,7 @@
     <div class="search col-lg-2 col-sm-3">
             <a href="/feedback" class="chat"><img src="/img/обратная-связь.png" align="left" class="img-chat">
             <div> Обратная связь</div> </a> 
-      <form action="/search" method="POST" class="form-search">
+      <form action="/search/" method="POST" class="form-search">
         <input type="image" name="picture" src="/img/лупа.png" width="20px" height="20px">
         <input class="input-search" type="search" placeholder="Поиск" aria-label="Search" name="search">
       </form>
