--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -28,7 +28,7 @@
             <a href="/feedback" class="chat"><img src="/img/обратная-связь.png" align="left" class="img-chat">
             <div> Обратная связь</div> </a> 
       <form action="/search/" method="POST" class="form-search">
-        <input type="image" name="picture" src="/img/лупа.png" width="20px" height="20px">
+        <input type="image" name="picture" src="/img/лупа.png"  width="20px">
         <input class="input-search" type="search" placeholder="Поиск" aria-label="Search" name="search">
       </form>
     </div>
