--- a/src/views/newEvent.html
+++ b/src/views/newEvent.html
@@ -1,17 +1,17 @@
 {% extends "templates/pageTemplate.html" %}
 {% block content %}
-<form > 
+<form action="/events/new" method="POST" > 
     <div class="form-group">
         <label for="eventName">Название мероприятия</label>
-        <input type="text" class="form-control" id="eventName"  placeholder="">
+        <input type="text" class="form-control" id="eventName" name="name" placeholder="">
     </div>
     <div class="form-group">
         <label for="eventDescription">Описание мероприятия</label>
-        <textarea class="form-control" id="eventDescription" rows="4"></textarea>
+        <textarea class="form-control" id="eventDescription" name="description" rows="4"></textarea>
     </div>
     <div class="form-group">
         <label for="eventData">Дата мероприятия</label>
-        <input type="datetime-local" class="form-control" id="eventDate"  placeholder="">
+        <input type="datetime-local" class="form-control" id="eventDate" name="date" placeholder="">
     </div>
     <div class="form-group">
         <label for="eventAddress">Адрес</label>
@@ -23,7 +23,7 @@
           Отправить приглашение всем
         </label>
     </div>
-    <button type="submit" onclick="send()" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
         <script>
             function send(){
