--- a/src/views/AllSurvey.html
+++ b/src/views/AllSurvey.html
@@ -1,87 +1,32 @@
 {% extends "templates/pageTemplate.html" %}
+
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
-<div class="menu row">
-        <a class="col-xl-1 d-none d-xl-block"></a>
-        <a class="col-xl-3 col-3 text-center my-auto">РЕГИСТРАЦИЯ</a>
-        <a class="col-xl-4 col-4 text-center my-auto" href="/contacts">КОНТАКТНАЯ ИНФОРМАЦИЯ</a>
-        <a class="col-xl-4 col-5 text-center my-auto" href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ <span class="d-none d-md-block">ПЛАТФОРМЫ</span></a>
-
-</div>
+{% include "templates/pageTopMenu.html" %}
 <hr>
 <link rel="stylesheet" href="/css/search.css">
     <div class="content row">
         <div class="result-search col-xl-9 col-md-7 col-sm-7 col-6 text-center">
-            <h1>Доступные опросы:</h1>
-            {% for name in mas_name %}
-            <a href={{'/survey/name'+name}}>{{name}} ({{mas_desc.shift()}})</a>
-            <br>
-            {% endfor %}
-            <h1>Результаты опросов:</h1>
-            {% for name in res_name %}
-            <a href={{'/survey/name'+name}}>{{name}} ({{res_desc.shift()}})</a>
-            <br>
-            {% endfor %}
+                {% if mas_name.length != 0 %}
+                        <h2>Доступные опросы:</h2>
+                        {% for name in mas_name %}
+                        <a href={{'/survey/name'+name}}>{{name}} ({{mas_desc.shift()}})</a>
+                        <br>
+                        {% endfor %}
+                {% else %}
+                        <h2>Доступные опросов нет</h2>
+                        <br>
+                {% endif %}
+                {% if res_name.length != 0 %}
+                        <h2>Результаты опросов:</h1>
+                        {% for name in res_name %}
+                        <a href={{'/survey/name'+name}}>{{name}} ({{res_desc.shift()}})</a>
+                        <br>
+                        {% endfor %}
+                {% endif %}
             
         </div>
-        <div id="side-menu" class="col-xl-3 col-md-5 col-sm-5 col-6">
-                <ul>
-                        <li>
-                                <a href="/publicreport">
-                                        <div class="wrapper">
-                                                <img src="/img/lk/public_reports.png" alt="preports">
-                                                Публичные отчеты
-                                        </div>
-                                </a>
-                        </li>
-
-                        <li>
-                                <a href="/personsmap">
-                                        <div class="wrapper">
-                                                <img src="/img/lk/stakeholders_map.png" alt="shsmap">
-                                                Карта заинтересованных сторон
-                                        </div>
-                                        
-                                </a>
-                        </li>
-
-                        <li>
-                                <a href="/survey">
-                                        <div class="wrapper">
-                                                <img src="/img/lk/public_surveys.png" alt="psurveys">
-                                                Публичные опросы
-                                        </div>
-                                </a>
-                        </li>
-
-                        <li>
-                                <a href="/events">
-                                        <div class="wrapper">
-                                                <img src="/img/lk/events_and_materials.png" alt="psurveys">
-                                                Мероприятия и материалы
-                                        </div>
-                                </a>
-                        </li>
-
-                        <li>
-                                <a href="#">
-                                        <div class="wrapper">
-                                                <img src="/img/lk/about_company.png" alt="psurveys">
-                                                О компании
-                                        </div>
-                                </a>
-                        </li>
-
-                        <li>
-                                <a href="/instruction">
-                                        <div class="wrapper">
-                                                <!-- <img src="/img/lk/about_company.png" alt="psurveys"> -->
-                                                Инструкция для стейхолдера
-                                        </div>
-                                </a>
-                        </li>
-                </ul>
-        </div>
+        {% include "templates/sideMenuTemplate.html" %}
     </div>
 
 {% endblock %}
