--- a/src/views/search.html
+++ b/src/views/search.html
@@ -1,13 +1,7 @@
 {% extends "templates/pageTemplate.html" %}
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
-<div class="menu row">
-        <a class="col-xl-1 d-none d-xl-block"></a>
-        <a class="col-xl-3 col-3 text-center my-auto">РЕГИСТРАЦИЯ</a>
-        <a class="col-xl-4 col-4 text-center my-auto" href="/contacts">КОНТАКТНАЯ ИНФОРМАЦИЯ</a>
-        <a class="col-xl-4 col-5 text-center my-auto" href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ <span class="d-none d-md-block">ПЛАТФОРМЫ</span></a>
-
-</div>
+{% include "templates/pageTopMenu.html" %}
 <hr>
 <link rel="stylesheet" href="/css/search.css">
     <div class="content row">
