--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -1,30 +1,43 @@
 {% extends "templates/pageTemplate.html" %}
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
+{% include "templates/pageTopMenu.html" %}
 <h4>публичные отчеты</h4>
 <div class="container-fluid">
         <div class="row">
-          <div class="col-md-10">
+          <div class="col-xl-9 col-md-7 col-sm-7 col-6">
+              {% if(admin) %}
+              <div class="col-md-2">
+                  <a href="/publicreport/new"><button type="button" class="btn btn-secondary btn-lg">
+                      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Создать
+                  </button> </a>           
+              </div>
+              {% endif %}
           {% for report in parametr %}
-          <div class="card text-center w-100 mb-4">
-              <div class="card-body">
-                <h5 class="card-title">{{report.name}}</h5>
-                <a href="/publicreport/id/{{report.id}}" class="btn btn-primary">подробнее</a>
-              </div>
-              <div class="card-footer text-muted">
-                {{report.creatingDate}}
-              </div>
+          <div class="card flex-md-row mb-4 box-shadow h-md-250">
+          <img class="card-img-right flex-auto d-none d-lg-block" data-src="" alt="" style="width: 200px; height: 250px;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
+              <div class="card-body d-flex flex-column align-items-start">
+                <h3 class="mb-0">
+                  <a class="text-dark" >{{report.name}}</a>
+                </h3>
+                <div class="mb-1 text-muted">{{report.creatingDate}}</div>
+                <p class="card-text mb-auto">{{report.description}}</p>
+                  <div class="container">
+                    <div class="row justify-content-around">
+                  <h5 class="mb-2">
+                    <a href="/file/{{ report.pdfSrc }}"> скачать pdf отчета на русском</a>
+                  </h5>
+                  <h5 class="mb-2">
+                      <a href="/file/{{ report.pdfEngSrc }}"> скачать pdf отчета на английском</a>
+                  </h5>
+                    </div>
+                    </div>
+                </div>
             </div>
-        
+            
           {% endfor %}
           </div>
-          {% if(admin) %}
-          <div class="col-md-2">
-              <a href="/publicreport/new"><button type="button" class="btn btn-secondary btn-lg">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Создать
-              </button> </a>           
-          </div>
-          {% endif %}
+          {% include "templates/sideMenuTemplate.html" %}
         </div>
 </div>
 
