--- a/src/views/AllSurvey.html
+++ b/src/views/AllSurvey.html
@@ -14,7 +14,7 @@
                         <br>
                         {% endfor %}
                 {% else %}
-                        <h2>Доступные опросов нет</h2>
+                        <h2>Доступных опросов нет</h2>
                         <br>
                 {% endif %}
                 {% if res_name.length != 0 %}
