--- a/src/views/lk.html
+++ b/src/views/lk.html
@@ -7,38 +7,34 @@
                 <div id="surveys" class="col-sm-12 col-md-4 col-lg order-md-2 order-lg-1 right-delimiter">
                         <div id="active-surveys" class="row">
                                 <div class="surveys-list col-12">
+                                                {% if mas_name.length != 0 %}
                                         <div class="block-title">
                                                 <img src="/img/lk/flag.png" alt="flag">
                                                 Активные опросы
                                         </div>
                                         
+                                        {% for name in mas_name %}
                                         <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
+                                                <a href={{'/survey/name'+name}}>{{name}} <br /> <span class="annotation">({{mas_desc.shift()}})</span></a>
                                         </div>
-                                        <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
-                                        </div>
+                                        {% endfor %}
+                                        {% endif %}
                                 </div>
                         </div>
                         <div id="surveys-results" class="row">
                                 <div class="surveys-list col-12">
+                                                {% if res_name.length != 0 %}
                                         <div class="block-title">
                                                 <img src="/img/lk/check.png" alt="check">
                                                 Результаты опросов
                                         </div>
                                         
+                                        {% for name in res_name %}
                                         <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
+                                                <a href={{'/survey/name'+name}}>{{name}} <br /> <span class="annotation">({{res_desc.shift()}})</span></a>
                                         </div>
-                                        <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
-                                        </div>
-                                        <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
-                                        </div>
-                                        <div class="survey">
-                                                <a href="#">Опрос 1 <br /> <span class="annotation">(аннотация)</span></a>
-                                        </div>
+                                        {% endfor %}
+                                        {% endif %}
                                 </div>
                         </div>
                 </div>
@@ -47,89 +43,53 @@
                                 <img src="/img/lk/documents.png" alt="documents">
                                 Документы на обсуждение
                         </div>
-
+                        {% for item in mas %}
                         <div class="document row">
                                 <div class="col-12">
                                         <div class="title">
-                                                <span class="name">Документ 1</span>
-                                                <a class="download-pdf float-right" href="#">Скачать pdf</a>
+                                                <span class="name">{{item.name}}</span>
+                                                <a class="download-pdf float-right" href={{'/file/'+item.file}}>Скачать pdf</a>
                                         </div>
                                         
                                         <p class="description">
-                                                Годовой отчет Группы компаний ASE - Инжинирингового дивизиона Госкорпорации «Росатом» за 2016 год
+                                                        {{item.description}}
                                         </p>
-
+                                        <form  method="POST" action={{'/fileNegotiation/all/agr'+item.name}}>
+                                                <p><input type="submit" value="согласовать"></p>
+                                        </form>
                                         <div class="comments">
                                                 <h6 class="comments-title">Комментарии</h6>
-
                                                 <div class="field">
                                                         <div class="members">
                                                                 <span class="sh">Стейкхолдер</span>
                                                                 <span class="admin float-right">Администратор</span>
                                                         </div>
+                                                        {% for d in item.account %}
+                                                        {% if d.sender != 'admin' %}
                                                         <div class="comment left">
                                                                 <span class="text">
-                                                                        Отчет содержит неточности
+                                                                                {{d.text}}
                                                                 </span> 
-                                                                <span class="date">10.11.2018</span>
+                                                                <span class="date">{{d.date}}</span>
                                                         </div>
+                                                        {% else %}
                                                         <div class="comment right">
                                                                 <span class="text">
-                                                                        Отчет содержит неточности
+                                                                                {{d.text}}
                                                                 </span> 
-                                                                <span class="date">10.11.2018</span>
+                                                                <span class="date">{{d.date}}</span>
                                                         </div>
+                                                        {% endif %}
+                                                        {% endfor %}
                                                 </div>
 
-                                                <form>
-                                                        <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter">
+                                                <form action={{'/fileNegotiation/all/msg'+item.name}} method="POST">
+                                                        <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter" name="dialog">
                                                 </form>
                                         </div>
                                 </div>
                         </div>
-                        <div class="document row">
-                                <div class="col-12">
-                                        <div class="title">
-                                                <span class="name">Документ 1</span>
-                                                <div class="confirm form-check form-check-inline">
-                                                        <input class="confirm-input form-check-input" type="checkbox" id="confirm-doc" value="option1">
-                                                        <label class="confirm-text form-check-label" for="confirm-doc">Подтвердить документ</label>
-                                                </div>
-                                                <a class="download-pdf float-right" href="#">Скачать pdf</a>
-                                        </div>
-                                        
-                                        <p class="description">
-                                                Годовой отчет Группы компаний ASE - Инжинирингового дивизиона Госкорпорации «Росатом» за 2016 год
-                                        </p>
-
-                                        <div class="comments">
-                                                <h6 class="comments-title">Комментарии</h6>
-
-                                                <div class="field">
-                                                        <div class="members">
-                                                                <span class="sh">Стейкхолдер</span>
-                                                                <span class="admin float-right">Администратор</span>
-                                                        </div>
-                                                        <div class="comment left">
-                                                                <span class="text">
-                                                                        Отчет содержит неточности
-                                                                </span> 
-                                                                <span class="date">10.11.2018</span>
-                                                        </div>
-                                                        <div class="comment right">
-                                                                <span class="text">
-                                                                        Отчет содержит неточности
-                                                                </span> 
-                                                                <span class="date">10.11.2018</span>
-                                                        </div>
-                                                </div>
-
-                                                <form>
-                                                        <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter">
-                                                </form>
-                                        </div>
-                                </div>
-                        </div>
+                        {% endfor %}
                 </div>
                 <div id="events" class="col-sm-12 col-md-8 col-lg order-md-3 order-lg-3 left-delimiter">
                         <div class="block-title">
