--- a/src/views/lk.html
+++ b/src/views/lk.html
@@ -1,8 +1,8 @@
 {% extends "templates/pageTemplate.html" %}
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
-
-<div class="container-fluid">
+<link rel="stylesheet" href="/css/lk.css">
+<div class="container-fluid content">
         <div class="colums row">
                 <div id="surveys" class="col-sm-12 col-md-4 col-lg order-md-2 order-lg-1 right-delimiter">
                         <div id="active-surveys" class="row">
